# cord-crypto

./: .gitmodules  CMakeLists.txt  README.md
AES/CBC/: cbc.c
AES/ECB/: TBD.txt
AES/cord-aes-cipher/: .gitignore  LICENSE  README.md  main.c
AES/cord-aes-cipher/.github/workflows/: main.yml
AES/cord-aes-cipher/includes/: aes_cipher.h  aes_helpers.h
AES/cord-aes-cipher/src/: aes_cipher.c  aes_helpers.c
Makefile/: CMakeLists.txt
